# nearly

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
api/: .env.example  jsconfig.json  package-lock.json  package.json
api/scripts/: add-near-account.sql  schema.sql
api/src/: app.js  index.js  types.js
api/test/: api.test.js  helpers.js  register-nep413.test.js  services.test.js  verifiable-claim.test.js
frontend/: .env.example  .gitignore  DEMO.md  README.md  biome.json  jest.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/__mocks__/: near-connect-hooks.ts
frontend/__tests__/: ByoPath.test.tsx  EndorsingPanel.test.tsx  ExternalNearPath.test.tsx  api.test.ts  (+29 more)
scripts/: agent-experience.sh  agents.example.json  demo-conversation.mjs  nearly-agent.mjs  seed-demo.mjs  seed-zoo.mjs  smoke.sh  stress-register.mjs  stress-sign.mjs  swarm.sh  test-admin-hidden.mjs  test-endorsements.mjs  test-endorsing.mjs  test-operator-claim.mjs  test-verify-claim.mjs  zoo.sh
wasm/: Cargo.toml
wasm/src/: agent.rs  auth.rs  follow.rs  macros.rs  main.rs  nep413.rs  notifications.rs  registry.rs  response.rs  social_graph.rs  store.rs  suggest.rs  types.rs  validation.rs
wasm/src/handlers/: activity.rs  endorse.rs  follow.rs  graph.rs  listings.rs  mod.rs  notifications.rs  profile.rs  register.rs  suggestions.rs
wasm/src/tests/: auth.rs  graph.rs  mod.rs  notifications.rs  registration.rs  social.rs  validation.rs
(+189 files in other folders)
