[package]
name = "nearly"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nearly"
path = "src/main.rs"

[dependencies]
outlayer = { path = "../vendor/outlayer" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "^2.1.1", default-features = false, features = ["alloc"] }
sha2 = { version = "^0.10.8", default-features = false }
bs58 = "0.5"
base64 = "0.22"
